[build-system]
requires = [
    "setuptools>=61.0", # Newer setuptools
    "wheel",
    "torch",
    "numpy",            # Added numpy (often needed by torch/extensions)
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "groundingdino"
version = "0.1.0"
description = "Grounding DINO"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}  # FIX: Changed from 'file' to 'text' to silence
authors = [
    {name = "Shilong Liu", email = "liushilong03@gmail.com"}
]
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "addict",
    "yapf",
    "timm",
    "numpy",
    "opencv-python",
    "supervision",
    "pycocotools"
]

[project.urls]
Repository = "https://github.com/TimeEscaper/GroundingDINO"
